--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -27,6 +27,7 @@ publisher:
 dependencies:
   ihe.iti.mcsd: 3.8.0
   hl7.fhir.dk.core: 2.0.0
+  medcom.ehmi.dk.balp: current
   medcom.fhir.dk.core: current
   medcom.fhir.dk.messaging: 2.0.0
   medcom.fhir.dk.terminology: 1.4.0
