--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -15,9 +15,9 @@ copyrightYear: 2023+
 releaseLabel: ci-build # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
 # license: CC0-1.0 # https://www.hl7.org/fhir/valueset-spdx-license.html
 jurisdiction: urn:iso:std:iso:3166#DK "Denmark"
-publisher:
-  name: MedCom
-  url: https://www.medcom.dk
+# publisher:
+  # name: MedCom
+  # url: https://www.medcom.dk
   # email: test@example.org
 
 # The dependencies property corresponds to IG.dependsOn. The key is the
