--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -4,10 +4,10 @@
 # │  see: https://fshschool.org/docs/sushi/configuration/.                                         │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 id: medcom.ehmi.dk.mcsd
-canonical: http://medcomehmi.dk/ig/ehmi_mcsd
+canonical: http://medcomehmi.dk/ig/ehmi-mcsd
 name: EHMI mCSD IG
-title: "DK MedCom EHMI mCSD"
-description: The MedCom EHMI mCSD IG
+title: "DK EHMI Care Services Directory"
+description: The EHMI Care Services Directory IG
 status: draft # draft | active | retired | unknown
 version: 0.2.0
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
