--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -82,7 +82,7 @@ menu:
   Artifacts: artifacts.html
   Downloads: downloads.html
   Terminology: terminology.html
-
+  User-stories: ehmi-userstories.html
 # ╭───────────────────────────Less Common Implementation Guide Properties──────────────────────────╮
 # │  Uncomment the properties below to configure additional properties on the ImplementationGuide  │
 # │  resource. These properties are less commonly needed than those above.                         │
