--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -6,8 +6,8 @@
 id: medcom.ehmi.dk.mcsd
 canonical: http://medcomehmi.dk/ig/ehmi-mcsd
 name: EHMI mCSD IG
-title: "DK EHMI Care Services Directory"
-description: The EHMI Care Services Directory IG
+title: "DK EHMI Healthcare Electronical Address Directory (HEAD)"
+description: The EHMI Healthcare Electronical Address Directory (HEAD) IG
 status: draft # draft | active | retired | unknown
 version: 0.2.0
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
