--- a/ig.ini
+++ b/ig.ini
@@ -1,3 +1,4 @@
 [IG]
 ig = fsh-generated/resources/ImplementationGuide-medcom.ehmi.dk.mcsd.json
-template = https://github.com/hl7dk/medcom-ig-template
+# template = https://github.com/hl7dk/medcom-ig-template
+template = https://github.com/medcomdk/dk-ehmi-template
