--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -3,13 +3,13 @@
 # │  used properties are included. For a list of all supported properties and their functions,     │
 # │  see: https://fshschool.org/docs/sushi/configuration/.                                         │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
-id: medcom.ehmi.dk.mcsd
-canonical: http://medcomehmi.dk/ig/ehmi-mcsd
-name: EHMI HEAD IG
-title: "DK EHMI Healthcare Electronical Address Directory (HEAD)"
-description: The EHMI Healthcare Electronical Address Directory (HEAD) IG
+id: dk.medcom.ehmi.eer
+canonical: http://medcomehmi.dk/ig/ehmi-eer
+name: EHMI EER IG
+title: "DK EHMI Endpoint Register (EER)"
+description: The EHMI Endpoint Register (EER) IG
 status: draft # draft | active | retired | unknown
-version: 0.2.0
+version: 0.3.0
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
 copyrightYear: 2023+
 releaseLabel: ci-build # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
