--- a/ig.ini
+++ b/ig.ini
@@ -1,5 +1,6 @@
 [IG]
-ig = fsh-generated/resources/ImplementationGuide-medcom.ehmi.dk.mcsd.json
+ig = fsh-generated/resources/ImplementationGuide-dk.medcom.ehmi.eer.json
+# ig = fsh-generated/resources/ImplementationGuide-medcom.ehmi.dk.mcsd.json
 # template = https://github.com/hl7dk/medcom-ig-template
 template = https://github.com/hl7dk/dk-ehmi-template
 # template = medcom.dk.ehmi.template#current
