--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -28,7 +28,7 @@ dependencies:
   ihe.iti.mcsd: 3.8.0
   hl7.fhir.dk.core: 2.0.0
   dk.medcom.ehmi.eds: current
-  # dk.medcom.ehmi.terminology: current
+  dk.medcom.ehmi.terminology: current
   # dk.ehmi.core: current
   # dk.ehmi.terminology: current
   medcom.fhir.dk.core: 2.3.0
