--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -89,7 +89,7 @@ menu:
     EER-EAS Use case 1: eas-Use-case-1.html
   User-stories: 
     EHMI User Stories: EHMI-User-Stories.html
-    mCSD User-stories: EHMI-CSD-User-Stories.html
+#    mCSD User-stories: EHMI-CSD-User-Stories.html
 # ╭───────────────────────────Less Common Implementation Guide Properties──────────────────────────╮
 # │  Uncomment the properties below to configure additional properties on the ImplementationGuide  │
 # │  resource. These properties are less commonly needed than those above.                         │
