--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -5,9 +5,9 @@
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 id: dk.ehmi.eer
 canonical: http://medcomehmi.dk/ig/dk-ehmi-eer
-name: EHMI Endpoint Register (EER) IG
-title: "DK EHMI Endpoint Register (EER)"
-description: The EHMI Endpoint Register (EER) IG 
+name: EER Endpoint Register (EER) IG
+title: "DK EER Endpoint Register (EER)"
+description: The EER Endpoint Register (EER) IG 
 status: draft # draft | active | retired | unknown
 version: 0.8.0
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
