--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -78,7 +78,7 @@ dependencies:
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 menu:
   Home: index.html
-  Table of Contents: toc.html
+# Table of Contents: toc.html
   Profiles: profiles.html
   Extensions: extensions.html
   Artifacts: artifacts.html
@@ -86,8 +86,8 @@ menu:
   Terminology: terminology.html
   Use-cases: 
     EER-EAS Use case 1: eas-Use-case-1.html
-  User-stories: 
-    EHMI User Stories: EHMI-User-Stories.html
+#  User-stories: 
+#    EHMI User Stories: EHMI-User-Stories.html
 #    mCSD User-stories: EHMI-CSD-User-Stories.html
 # ╭───────────────────────────Less Common Implementation Guide Properties──────────────────────────╮
 # │  Uncomment the properties below to configure additional properties on the ImplementationGuide  │
