--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -27,7 +27,7 @@ jurisdiction: urn:iso:std:iso:3166#DK "Denmark"
 dependencies:
   ihe.iti.mcsd: 3.8.0
   hl7.fhir.dk.core: 2.0.0
-  dk.medcom.ehmi.eds: current
+#  dk.medcom.ehmi.eds: current
   dk.ehmi.terminology: current
   # dk.ehmi.core: current
   # medcom.fhir.dk.core: 2.4.0
@@ -89,8 +89,8 @@ menu:
   Terminology: terminology.html
   Use-cases: 
     EER-EAS Use case 1: eas-Use-case-1.html
-#  User-stories: 
-#    EHMI User Stories: EHMI-User-Stories.html
+  User-stories: 
+     EHMI User Stories: EHMI-User-Stories.html
 #    mCSD User-stories: EHMI-CSD-User-Stories.html
 # ╭───────────────────────────Less Common Implementation Guide Properties──────────────────────────╮
 # │  Uncomment the properties below to configure additional properties on the ImplementationGuide  │
