--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -81,7 +81,7 @@ dependencies:
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 menu:
   Home: index.html
-  EER and SOR: sor-mapping.html
+  EER and SOR: SOR-EER-mapping.html
 ## Table of Contents: toc.html
   Profiles: profiles.html
   Extensions: extensions.html
