--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -90,7 +90,7 @@ menu:
   Terminology: terminology.html
   Security: 
     Security-en: security-en.html
-    Security-da: security-dk.html
+    Security-da: security-da.html
   Use-cases: 
     EER-EAS Use case 1: eas-Use-case-1.html
   User-stories: 
