--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -25,9 +25,9 @@ jurisdiction: urn:iso:std:iso:3166#DK "Denmark"
 # use cases, the value can be an object with keys for id, uri, and version.
 # x
 dependencies:
-  ihe.iti.mcsd: 3.8.0
-  hl7.terminology.r4: 5.5.0
-  hl7.fhir.dk.core: 2.0.0
+  ihe.iti.mcsd: 3.9.0
+#  hl7.terminology.r4: 5.5.0
+  hl7.fhir.dk.core: 3.3.0
   medcom.fhir.dk.core: current
   medcom.fhir.dk.messaging: current
   medcom.fhir.dk.terminology: current
