--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -90,12 +90,13 @@ menu:
   Security: 
     Security-en: security-EER-english.html
     Security-da: security-EER-danish.html
-  Use-cases: 
+  Use-cases/User-stories: 
     EER-EAS Use case 1: eas-Use-case-1.html
-  User-stories: 
      EHMI User Stories: EHMI-User-Stories.html
-  Extensions: extensions.html
-  Downloads: downloads.html
+  More:
+    Table of Contents: toc.html
+    Downloads: downloads.html
+    Dependencies: dependencies.html
 #    mCSD User-stories: EHMI-CSD-User-Stories.html
 # ╭───────────────────────────Less Common Implementation Guide Properties──────────────────────────╮
 # │  Uncomment the properties below to configure additional properties on the ImplementationGuide  │
