--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -84,16 +84,16 @@ menu:
   Home: index.html
   EER and SOR: SOR-EER-mapping.html
   Profiles: profiles.html
-  Artifacts: artifacts.html
   Use-cases: 
     EER Use case 1: eer-Use-case-1.html
-    EER Use case 2: eer-Use-case-2.html
+    #EER Use case 2: eer-Use-case-2.html
     EER-EAS Use case 4: eas-Use-case-4.html
     # EHMI User Stories: EHMI-User-Stories.html
   Security: 
     Security-en: security-EER-english.html
     Security-da: security-EER-danish.html
 #  Terminology: terminology.html
+  Artifacts: artifacts.html
   More:
     Table of Contents: toc.html
     Downloads: downloads.html
