--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -4,7 +4,7 @@
 # │  see: https://fshschool.org/docs/sushi/configuration/.                                         │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 id: dk.ehmi.eer
-canonical: http://medcomehmi.dk/ig/dk-ehmi-eer
+canonical: http://medcomehmi.dk/ig/eer
 name: EER Endpoint Register (EER) IG
 title: "DK EER Endpoint Register (EER)"
 description: The EER Endpoint Register (EER) IG 
