--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@ Thumbs.db
 /output
 /temp
 /template
+.vscode/settings.json
+_build.bat
+_gencontinuous.bat
+_gencontinuous.bat
+_gencontinuous.sh
+_genonce.bat
+_genonce.sh
+_updatePublisher.bat
+_updatePublisher.sh
