Fix TODO's and notes

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -4,7 +4,7 @@ name: EHMI Endpoint Register (EER) IG
 title: "DK EHMI Endpoint Register (EER)"
 description: The EHMI Endpoint Register (EER) IG
 status: draft # draft | active | retired | unknown
-version: 1.0.0-draft
+version: 2.0.0-draft
 fhirVersion: 4.0.1
 copyrightYear: 2025+
 releaseLabel: ci-build # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
@@ -20,7 +20,7 @@ dependencies:
   medcom.fhir.dk.core: 2.4.0
   medcom.fhir.dk.messaging: 3.0.0
   medcom.fhir.dk.terminology: 1.8.1
-  dk.ehmi.terminology: 1.0.1-draft
+  dk.ehmi.terminology: current
 
 menu:
   Home: index.html
